@@ -9,6 +9,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "USER_DETAILS")
@@ -26,12 +27,11 @@ public class Users implements UserDetails {
   String username;
   String password;
   String role;
-  String email;
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-//    return List.of(new SimpleGrantedAuthority(role));
-    return Collections.singletonList(new SimpleGrantedAuthority(role));
+    return List.of(new SimpleGrantedAuthority(role));
+//    return Collections.singletonList(new SimpleGrantedAuthority(role));
   }
 
   @Override
